force-app/main/default/objects/Appointments_Old__c/Appointments_Old__c.object-meta.xml
<CustomObject>
    <label>Appointment Old</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Appointment #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appointments Olds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>