force-app/main/default/objects/Appointments_Old__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account (Patient Name)</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>