force-app/main/default/objects/Appointments_Old__c/fields/All_Follow_Up_Complete__c.field-meta.xml
<CustomField>
    <fullName>All_Follow_Up_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Follow Up Complete</label>
    <type>Checkbox</type>
</CustomField>