force-app/main/default/objects/Appointments_Old__c/fields/Appointment_Date__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Date__c</fullName>
    <description>Date of the Appointment</description>
    <label>Appointment Date</label>
    <type>Date</type>
</CustomField>