force-app/main/default/objects/Appointments_Old__c/fields/Appointment_Time__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Time__c</fullName>
    <description>Time of Appointment</description>
    <label>Appointment Time</label>
    <type>Time</type>
</CustomField>