force-app/main/default/objects/Appointments_Old__c/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Patient Rescheduled</fullName>
            </value>
            <value>
                <fullName>Office Rescheduled</fullName>
            </value>
            <value>
                <fullName>No Show</fullName>
            </value>
            <value>
                <fullName>No Authorization</fullName>
            </value>
            <value>
                <fullName>Tardiness</fullName>
            </value>
            <value>
                <fullName>Patient Left</fullName>
            </value>
            <value>
                <fullName>Not Needed</fullName>
            </value>
            <value>
                <fullName>No Reason Given</fullName>
            </value>
            <value>
                <fullName>Called to Cancel</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>