force-app/main/default/objects/Appointments_Old__c/fields/Care_Plan__c.field-meta.xml
<CustomField>
    <fullName>Care_Plan__c</fullName>
    <label>Care Plan</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>