force-app/main/default/objects/Appointments_Old__c/fields/Chart_Number__c.field-meta.xml
<CustomField>
    <fullName>Chart_Number__c</fullName>
    <label>Chart Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>