force-app/main/default/objects/Appointments_Old__c/fields/Chief_Complaint__c.field-meta.xml
<CustomField>
    <fullName>Chief_Complaint__c</fullName>
    <label>Chief Complaint</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Chief_Complaint</valueSetName>
    </valueSet>
</CustomField>