force-app/main/default/objects/Appointments_Old__c/fields/External_Referral_to__c.field-meta.xml
<CustomField>
    <fullName>External_Referral_to__c</fullName>
    <label>External Referral to</label>
    <length>100</length>
    <type>Text</type>
</CustomField>