force-app/main/default/objects/Appointments_Old__c/fields/Intake__c.field-meta.xml
<CustomField>
    <fullName>Intake__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intake</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>