force-app/main/default/objects/Appointments_Old__c/fields/Need_the_Following__c.field-meta.xml
<CustomField>
    <fullName>Need_the_Following__c</fullName>
    <label>Need the Following</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Surgery</fullName>
            </value>
            <value>
                <fullName>Reschedule</fullName>
            </value>
            <value>
                <fullName>Request Authorization</fullName>
            </value>
            <value>
                <fullName>Follow Up Appt</fullName>
            </value>
            <value>
                <fullName>x-ray</fullName>
            </value>
            <value>
                <fullName>MRI/CT-scan</fullName>
            </value>
            <value>
                <fullName>EMG</fullName>
            </value>
            <value>
                <fullName>DME</fullName>
            </value>
            <value>
                <fullName>Chiopractic Care</fullName>
            </value>
            <value>
                <fullName>Physical Therapy</fullName>
            </value>
            <value>
                <fullName>Occupational Therapy</fullName>
            </value>
            <value>
                <fullName>Acupunture</fullName>
            </value>
            <value>
                <fullName>Pain Management</fullName>
            </value>
            <value>
                <fullName>Orthopedic - Extremity</fullName>
            </value>
            <value>
                <fullName>Orthopedic - Spine</fullName>
            </value>
            <value>
                <fullName>External Referral</fullName>
            </value>
            <value>
                <fullName>Complete Booking Sheet</fullName>
            </value>
            <value>
                <fullName>Clearance</fullName>
            </value>
            <value>
                <fullName>Request Assist</fullName>
            </value>
            <value>
                <fullName>Request Neuro-Monitoring</fullName>
            </value>
            <value>
                <fullName>Request Instrumentation</fullName>
            </value>
            <value>
                <fullName>Request SX Verification</fullName>
            </value>
            <value>
                <fullName>Request Post Op-Meds</fullName>
            </value>
            <value>
                <fullName>Pre-Op Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>