force-app/main/default/objects/Appointments_Old__c/fields/ODI_Post_Op__c.field-meta.xml
<CustomField>
    <fullName>ODI_Post_Op__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ODI Post- Op</label>
    <type>Checkbox</type>
</CustomField>