force-app/main/default/objects/Appointments_Old__c/fields/ODI_pre_opp__c.field-meta.xml
<CustomField>
    <fullName>ODI_pre_opp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ODI Pre-Opp</label>
    <type>Checkbox</type>
</CustomField>