force-app/main/default/objects/Appointments_Old__c/fields/Office__c.field-meta.xml
<CustomField>
    <fullName>Office__c</fullName>
    <label>Office</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Office_FULL_NAME</valueSetName>
    </valueSet>
</CustomField>