force-app/main/default/objects/Appointments_Old__c/fields/Ortho_Spine_Appointment_Type__c.field-meta.xml
<CustomField>
    <fullName>Ortho_Spine_Appointment_Type__c</fullName>
    <label>Ortho Spine Appointment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial</fullName>
            </value>
            <value>
                <fullName>Regular Follow Up</fullName>
            </value>
            <value>
                <fullName>ROF</fullName>
            </value>
            <value>
                <fullName>1 week Post-Op</fullName>
            </value>
            <value>
                <fullName>2 week Post-Op</fullName>
            </value>
            <value>
                <fullName>4-6 week Post-Op</fullName>
            </value>
            <value>
                <fullName>12 week/ 3 Month Post-Op</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>