force-app/main/default/objects/Appointments_Old__c/fields/Potential_Patient__c.field-meta.xml
<CustomField>
    <fullName>Potential_Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lead linked to Appointment</description>
    <label>Potential Patient</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>