force-app/main/default/objects/Appointments_Old__c/fields/Pre_Appt_Notes__c.field-meta.xml
<CustomField>
    <fullName>Pre_Appt_Notes__c</fullName>
    <description>Notes/Details to prepare for the scheduled appointment</description>
    <inlineHelpText>Field to enter Notes</inlineHelpText>
    <label>Pre-Appt Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>