force-app/main/default/objects/Appointments_Old__c/fields/Reschedule_Cancel_Reason__c.field-meta.xml
<CustomField>
    <fullName>Reschedule_Cancel_Reason__c</fullName>
    <inlineHelpText>Field to enter the reason a Patient canceled or Rescheduled an Appointment</inlineHelpText>
    <label>Reschedule/Cancel Reason</label>
    <length>50</length>
    <type>Text</type>
</CustomField>