force-app/main/default/objects/Appointments_Old__c/fields/Scheduled_for__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_for__c</fullName>
    <label>Scheduled for</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Missed Appointment</fullName>
            </value>
            <value>
                <fullName>Follow Up Appt</fullName>
            </value>
            <value>
                <fullName>x-ray</fullName>
            </value>
            <value>
                <fullName>MRI/CT-scan</fullName>
            </value>
            <value>
                <fullName>EMG</fullName>
            </value>
            <value>
                <fullName>DME</fullName>
            </value>
            <value>
                <fullName>Authorization</fullName>
            </value>
            <value>
                <fullName>Chiropractic Care</fullName>
            </value>
            <value>
                <fullName>Physical Therapy</fullName>
            </value>
            <value>
                <fullName>Occupational Therapy</fullName>
            </value>
            <value>
                <fullName>Acupuncture</fullName>
            </value>
            <value>
                <fullName>Pain Management</fullName>
            </value>
            <value>
                <fullName>Orthopedic - Extremity</fullName>
            </value>
            <value>
                <fullName>Orthopedic - Spine</fullName>
            </value>
            <value>
                <fullName>External Referral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>