force-app/main/default/objects/Appointments_Old__c/fields/Specialist_Seen_at_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Specialist_Seen_at_Appointment__c</fullName>
    <label>Specialist Seen at Appointment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chiropractor</fullName>
            </value>
            <value>
                <fullName>Physical Therapist</fullName>
            </value>
            <value>
                <fullName>Occupational Therapist</fullName>
            </value>
            <value>
                <fullName>Acupuncturist</fullName>
            </value>
            <value>
                <fullName>Pain Management</fullName>
            </value>
            <value>
                <fullName>Orthopedic - Extremity</fullName>
            </value>
            <value>
                <fullName>Orthopedic - Spine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>