force-app/main/default/objects/Appointments_Old__c/fields/Surgery_Indicated__c.field-meta.xml
<CustomField>
    <fullName>Surgery_Indicated__c</fullName>
    <label>Surgery Indicated</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cervical ACDF</fullName>
            </value>
            <value>
                <fullName>Discectomy</fullName>
            </value>
            <value>
                <fullName>Lamiectomy &amp; Discectomy</fullName>
            </value>
            <value>
                <fullName>Spinal Cord Simulator</fullName>
            </value>
            <value>
                <fullName>TliF</fullName>
            </value>
            <value>
                <fullName>Dural Tear Repair</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>