force-app/main/default/objects/Appointments_Old__c/fields/SX_Levels__c.field-meta.xml
<CustomField>
    <fullName>SX_Levels__c</fullName>
    <label>SX Levels</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>