force-app/main/default/objects/Appointments_Old__c/recordTypes/Employee.recordType-meta.xml
<RecordType>
    <fullName>Employee</fullName>
    <active>false</active>
    <label>Employee</label>
</RecordType>