force-app/main/default/objects/Appointments_Old__c/recordTypes/Orthopedic_Foot_and_Ankle.recordType-meta.xml
<RecordType>
    <fullName>Orthopedic_Foot_and_Ankle</fullName>
    <active>true</active>
    <label>Orthopedic Foot and Ankle</label>
</RecordType>