force-app/main/default/objects/Appointments_Old__c/recordTypes/Orthopedic_Joint_Extremity.recordType-meta.xml
<RecordType>
    <fullName>Orthopedic_Joint_Extremity</fullName>
    <active>true</active>
    <label>Orthopedic Joint &amp; Extremity</label>
</RecordType>