force-app/main/default/objects/Appointments_Old__c/recordTypes/Pain_Management_Appointment.recordType-meta.xml
<RecordType>
    <fullName>Pain_Management_Appointment</fullName>
    <active>true</active>
    <label>Pain Management Appointment</label>
</RecordType>