force-app/main/default/objects/Appointments_Old__c/recordTypes/Patient.recordType-meta.xml
<RecordType>
    <fullName>Patient</fullName>
    <active>true</active>
    <label>Orthopedic Spine Appointment</label>
</RecordType>