force-app/main/default/objects/Appointments_Old__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Patient__c</columns>
    <columns>Appointment_Date__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>